# Invictus

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  PRODUCT.md  README.md  pyproject.toml  run.py
.github/workflows/: ci.yml
.impeccable/: config.json
docs/: build-log.md
setup/: README.md  deploy.sh  gmail_auth.py  seed.py
src/: config.py  graph.py  state.py  utils.py
src/agents/: apply.py  ats_detect.py  cover_letter.py  crawler.py  job_meta.py  outreach.py  reply_tracker.py  reporter.py  resume_tailor.py  search.py  watchlist.py
src/db/: client.py  schema.sql  storage.py
src/filters/: dedup.py  preference.py
src/notifications/: slack.py
src/rag/: embedder.py  retriever.py
supabase/: config.toml
supabase/migrations/: 20260709184741_fix_rls_and_security.sql  20260711220044_application_artifact_buckets.sql  20260712020145_resume_document.sql  20260712020200_drop_unused_storage_read_policies.sql  20260712022249_cover_letter_seed_mode.sql  20260712041059_slack_integration_and_run_log.sql  20260712231732_agent_settings.sql  20260713002856_resume_document_structured.sql  20260716155128_broad_scan_tiering.sql  20260716172707_scrape_cache.sql  (+7 more)
tests/: test_apply.py  test_ats_detect.py  test_cover_letter.py  test_crawler.py  test_dedup.py  test_graph.py  test_job_meta.py  test_outreach.py  test_preference_filter.py  test_rag_embedder.py  test_rag_retriever.py  test_reply_tracker.py  test_reporter.py  test_resume_tailor.py  test_search_agent.py  test_slack.py  test_storage.py  test_watchlist.py
ui/: next.config.ts  package-lock.json  package.json
(+82 files in other folders)
